--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -8,11 +8,27 @@
   margin-right: 8px;
 }
 
+
 @media (max-width: 576px) {
   .navbar-logo {
     height: 40px;
   }
 }
+.library-name {
+  display: inline-block;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+}
+
+@media (max-width: 576px) {
+  .library-name {
+    font-size: 14px;
+    max-width: 170px;
+  }
+}
+
 
 
 /* ======================================
@@ -143,9 +159,9 @@
 
 .book-card .overlay {
   position: absolute;
-  top: 0; 
+  top: 0;
   left: 0;
-  width: 100%; 
+  width: 100%;
   height: 100%;
   background: rgba(0, 0, 0, 0.4);
   opacity: 0;
