--- a/public/css/detailbuku.css
+++ b/public/css/detailbuku.css
@@ -3,7 +3,7 @@
 ==================== */
 body {
   font-family: 'Poppins', sans-serif;
-  background: url('/assets/img/bg-detail.jpg') no-repeat center center fixed;
+  background: url('/assets/img/bg5.jpg') no-repeat center center fixed;
   background-size: cover;
   min-height: 100vh;
   display: flex;
